--- a/src/main/resources/templates/footer/footer.html
+++ b/src/main/resources/templates/footer/footer.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Title</title>
-  <script src="https://unpkg.com/feather-icons"></script>
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/footer.css">
+<meta charset="UTF-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Title</title>
+<script src="https://unpkg.com/feather-icons"></script>
+<link rel="stylesheet" href="css/common.css">
+<link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
-<footer th:fragment="footer">
-<div class="footer-radius"></div>
-<div class="waves">
-  <div class="wave" id="wave1"></div>
-  <div class="wave" id="wave2"></div>
-  <div class="wave" id="wave3"></div>
-  <div class="wave" id="wave4"></div>
-</div>
-  <ul class="social-icon">
-    <li><a href=""><i data-feather="twitter"></i></a></li>
-    <li><a href=""><i data-feather="facebook"></i></a></li>
-    <li><a href=""><i data-feather="instagram"></i></a></li>
-    <li><a href=""><i data-feather="youtube"></i></a></li>
-  </ul>
-  <ul class="footer-menu">
-    <li><a href="home">홈</a></li>
-    <li><a href="feed">피드</a></li>
-    <li><a href="aicc">AI 돋보기</a></li>
-    <li><a href="band">밴드</a></li>
-    <li><a href="info">여행정보</a></li>
-      <li><a href="map">지도</a></li>
-  </ul>
-  <p>&COPY; green computer | 16th gajo</p>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-		crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script type="text/javascript"
-		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5bceb465ea8b2b4878f8bec64e4f6d05"></script>
-</footer>
-<script>
-  feather.replace()
-</script>
+	<footer th:fragment="footer" class="align-items-stretch">
+		<div class="footer-radius"></div>
+		<div class="waves">
+			<div class="wave" id="wave1"></div>
+			<div class="wave" id="wave2"></div>
+			<div class="wave" id="wave3"></div>
+			<div class="wave" id="wave4"></div>
+		</div>
+		<ul class="social-icon">
+			<li><a href=""><i data-feather="twitter"></i></a></li>
+			<li><a href=""><i data-feather="facebook"></i></a></li>
+			<li><a href=""><i data-feather="instagram"></i></a></li>
+			<li><a href=""><i data-feather="youtube"></i></a></li>
+		</ul>
+		<ul class="footer-menu">
+			<li><a href="home">홈</a></li>
+			<li><a href="feed">피드</a></li>
+			<li><a href="aicc">AI 돋보기</a></li>
+			<li><a href="band">밴드</a></li>
+			<li><a href="info">여행정보</a></li>
+			<li><a href="map">지도</a></li>
+		</ul>
+		<p>&COPY; green computer | 16th gajo</p>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+			crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script type="text/javascript"
+			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5bceb465ea8b2b4878f8bec64e4f6d05"></script>
+	</footer>
+	<script>
+		feather.replace()
+	</script>
 </body>
 </html>
