--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -248,8 +248,9 @@
 						<!--feed box text-->
 						<div class="col px-0">
 							<span class="float-start fw-bold f15" th:text="${feed.Member_Id}">박검지</span><br>
-							<span class="float-start text-muted f13">하이라이트</span>
-							<span class="float-start text-muted f13 ms-3 recentSort" th:text="${feed.getFeed_updateday()}"></span>
+							<span class="float-start text-muted f13 me-3" th:if="${#strings.contains(feed.Feed_updateday,'전')}">하이라이트</span>
+							<span class="float-start text-muted f13 recentSort" th:text="${feed.getFeed_updateday()}">시간</span>
+<!-- 							<input type="hidden" class="recentSort" th:value="${feed.getFeed_updateday()}"/> -->
 						</div>
 						<!-- 우측 버튼 -->
 						<div class="col-3 d-flex justify-content-end align-items-center">
@@ -279,17 +280,17 @@
 					</div>
 					<!-- feed box center | Carousel image -->
 					<div
-						class="col-12 feed-box-center d-flex justify-content-center align-items-center overflow-hidden mh-200">
+						class="col-12 feed-box-center d-flex justify-content-center align-items-center overflow-hidden">
 						<div th:id="'feedCarousel'+${feed.Feed_num}"
-							class="carousel slide" data-bs-ride="false">
+							class="carousel slide w-100 h-100" data-bs-ride="false">
 							<!-- carousel items loop -->
-							<div class="carousel-inner">
+							<div class="carousel-inner w-100 h-100">
 								<div
 									th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feed.Feed_thumbnail, ',')}"
-									class="carousel-item overflow-hidden xh-300 p-0"
+									class="carousel-item p-0 mh-250 w-100 h-100"
 									th:classappend="${thumbnailStat.index==0} ? 'active' : ''">
 									<img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}"
-										class="d-block w-100 object-fit" alt="#">
+										class="d-block w-100 h-100 object-fit img-center" alt="#">
 								</div>
 							</div>
 							<!-- Carousel Prev/Next button -->
@@ -315,7 +316,8 @@
 					<!--feed-box-bot | text-->
 					<div class="col-12 feed-box-bot p-4 pt-3 pb-5">
 						<span class="fw-bold mb-2" th:text="${feed.Feed_title}">맥주
-							맛집🍺✨</span><span class="f13" th:text="${feed.Feed_content}">맥주는
+							맛집🍺✨</span>
+						<span class="f13" th:utext="${feed.Feed_content}">맥주는
 							왜 먹어도 먹어도 맛있을까요? </span>
 					</div>
 					<!--feed box bot | text-->
@@ -441,7 +443,7 @@
 	            },
 	            getSortData: {
 	                heartSort: '.heartSort parseInt', // 좋아요 수를 기준으로 정렬
-	                recentSort: '.recentSort' // 최신순으로 정렬
+	                recentSort: '.recentSort parseInt' // 최신순으로 정렬
 	            }
 	        });
 	
@@ -461,9 +463,9 @@
 	            // Isotope 그리드를 'recentSort' 기준으로 다시 정렬
 	            $grid.isotope({
 	                sortBy: 'recentSort',
-	                /* sortAscending: {
+	                sortAscending: {
 	                    recentSort: false // 최신순을 내림차순으로 정렬하여 최신순으로 표시
-	                } */
+	                }
 	            });
 	        });
 	    });
