--- a/src/main/resources/templates/thymeleaf/feed/feed_show.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_show.html
@@ -65,7 +65,7 @@
 									<!-- carousel items loop -->
 									<div class="carousel-inner col-12 feed-box-center">
 										<div th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feedList.getFeed_thumbnail(), ',')}" class="carousel-item p-0 h-100" th:classappend="${thumbnailStat.index==0} ? 'active' : ''">
-											<img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}" class="d-block w-100" alt="#">
+											<img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}" class="d-block img-fluid" alt="#">
 										</div>
 									</div>
 									<!-- Carousel Prev/Next button -->
@@ -84,7 +84,7 @@
 							<!--feed-box-center | text-->
 							<div class="col-12 feed-box-bot p-4 pt-3">
 								<span class="fw-bold d-block f17" th:text="${feedList.getFeed_title()}">맥주 맛집🍺✨</span>
-								<span class="f14" th:text="${feedList.getFeed_content()}">맥주는 왜 먹어도 먹어도 맛있을까요? </span>
+								<span class="f14" th:utext="${feedList.getFeed_content()}">맥주는 왜 먹어도 먹어도 맛있을까요? </span>
 							</div>
 							<!--feed box bot | #TAG -->
 							<div class="col feed-tag-box p-4 text-muted f13 d-flex gap-1">
