--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -323,7 +323,7 @@
 							<!--feed box text-->
 							<div class="col px-0">
 								<span class="float-start fw-bold f16" th:text="${feed.Member_Id}">박검지</span><br>
-								<span class="float-start text-muted f13" th:if="${#strings.contains(feed.Feed_updateday,'전')}">하이라이트</span><span class="float-start text-muted f13 ms-3" th:text="${feed.Feed_updateday}">시간</span>
+								<span class="float-start text-muted f13 me-2" th:if="${#strings.contains(feed.Feed_updateday,'전')}">하이라이트</span><span class="float-start text-muted f13" th:text="${feed.Feed_updateday}">시간</span>
 							</div>
 							<!-- 우측 버튼 -->
 							<div class="col-3 d-flex justify-content-end align-items-center">
